--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <p id="counter">0</p>
+    <button id="incrementBtn">Increment</button>
 
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
